# mcts-reasoning

./: .gitignore  .mcp.json  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  DOCUMENTATION.md  README.md  TDD_TESTING_SUMMARY.md  example_tree.json  mcts_shell.py  mcts_tui.py  mkdocs.yml  pyproject.toml  setup.py
benchmarks/: gsm8k_sample.json  logic_sample.json  math_sample.json
docs/: MCP_INTEGRATION.md  PROMPT_FEATURES.md  README.md  TUI_GUIDE.md  index.md
examples/: basic_usage.py  compositional_demo.py  consistency_check.py  mcp_demo.py  probe_ollama.py  rag_demo.py  remote_ollama.py  run_mcts.py  sampling_demo.py  shell_workflows.md
experiments/: budget_controlled.jsonl  design_notes.md  exp1_actions.json  exp2_decompose.json  fair_comparison.jsonl  fair_comparison.py  gpu_actions.json  gpu_assistant_role.dot  gpu_assistant_role.json  gpu_conclude_fix.dot  gpu_conclude_fix.json  gpu_final.json  gpu_firstperson.dot  gpu_firstperson.json  gpu_groundtruth_eval.json  gpu_llama32_actions.dot  gpu_llama32_actions.json  gpu_llama32_decompose_arithmetic.json  gpu_llama32_decompose_knights.json  gpu_llama32_math.dot  gpu_llama32_math.json  gpu_llm_judge.json  gpu_minimal_user.dot  gpu_minimal_user.json  gpu_selfconsistency_12sim.json  pipeline_gcd.json  pipeline_v2_gcd.json  results.jsonl  run_action_experiment.py  run_experiments.py  sample_tree.dot  sample_tree.json  scripted_tree.dot  scripted_tree.json  scripted_v2.dot  scripted_v2.json  scripted_v3_transitions.json  synthdata_baseline.json  synthdata_comprehensive.json  varied_results.jsonl
paper/: Makefile  (+6 more)
(+180 files in other folders)
