[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mcts-reasoning"
version = "0.6.0"
description = "Composable Monte Carlo Tree Search for LLM reasoning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ollama = ["requests>=2.28.0"]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
server = ["mcp>=1.0.0"]
all = ["requests>=2.28.0", "openai>=1.0.0", "anthropic>=0.18.0", "mcp>=1.0.0"]
dev = ["pytest", "pytest-cov", "pytest-asyncio", "black", "ruff", "mypy"]

[project.scripts]
mcts-reason = "mcts_reasoning.cli:main"

[tool.pytest.ini_options]
markers = ["integration: marks tests requiring network/API access"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mcts_reasoning*"]

[tool.ruff]
target-version = "py310"
